AUTOMAKE_OPTIONS = no-dependencies

bin_PROGRAMS = \
	TestGfxPrimitives \
	TestRotozoom \
	TestFramerate \
	TestImageFilter \
	TestFonts

TestGfxPrimitives_SOURCES = TestGfxPrimitives.c
TestRotozoom_SOURCES = TestRotozoom.c
TestFramerate_SOURCES = TestFramerate.c
TestImageFilter_SOURCES = TestImageFilter.c
TestFonts_SOURCES = TestFonts.c

DISTCLEANFILES = *~ *~c *~h *.cross.cache inc
