EXTRA_DIST = drv_AF.c     \
             drv_aix.c    \
             drv_aiff.c   \
             drv_alsa.c   \
             drv_dart.c   \
             drv_ds.c     \
             drv_esd.c    \
             drv_hp.c     \
             drv_mac.c    \
             drv_nos.c    \
             drv_os2.c    \
             drv_oss.c    \
             drv_osx.c    \
             drv_pipe.c   \
             drv_raw.c    \
             drv_sam9407.c\
             drv_sb.c     \
             drv_sgi.c    \
             drv_stdout.c \
             drv_sun.c    \
             drv_ultra.c  \
             drv_wav.c    \
             drv_wss.c    \
             drv_win.c    
	
