
## Makefile.am for SDL using the PSP video driver

noinst_LTLIBRARIES = libvideo_psp.la
libvideo_psp_la_SOURCES = $(SRCS)

# The SDL PSP video driver sources
SRCS = 				\
	SDL_pspevents.c		\
	SDL_pspevents_c.h	\
	SDL_pspgl.c		\
	SDL_pspgl_c.h		\
	SDL_pspmouse.c		\
	SDL_pspmouse_c.h	\
	SDL_pspvideo.c		\
	SDL_pspvideo.h
